Updated bert model

--- a/models.ipynb
+++ b/models.ipynb
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,15 +854,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_ids = tf.keras.Input(shape=(max_length,), dtype=tf.int32)\n",
+    "input_ids = tf.keras.Input(shape=(max_length,), dtype=tf.int32, name='input_ids')\n",
+    "attention_mask = tf.keras.Input(shape=(max_length,), dtype=tf.int32, name='attention_mask')\n",
     "\n",
-    "bert_output = bert_model(input_ids)\n",
-    "\n",
-    "# logits_output = tf.expand_dims(bert_output.logits, axis=1)\n",
+    "bert_output = bert_model([input_ids, attention_mask])\n",
     "\n",
     "net = tf.keras.layers.Bidirectional(\n",
     "    tf.keras.layers.LSTM(64, return_sequences=True)\n",
@@ -878,54 +877,56 @@
     "\n",
     "output = tf.keras.layers.Dense(num_label, activation=\"softmax\")(net)\n",
     "\n",
-    "model = tf.keras.Model(inputs=input_ids, outputs=output)"
+    "model = tf.keras.Model(inputs=[input_ids, attention_mask], outputs=output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " input_1 (InputLayer)        [(None, 100)]             0         \n",
-      "                                                                 \n",
-      " tf_bert_model (TFBertModel  TFBaseModelOutputWithPo   109482240 \n",
-      " )                           olingAndCrossAttentions             \n",
-      "                             (last_hidden_state=(Non             \n",
-      "                             e, 100, 768),                       \n",
-      "                              pooler_output=(None, 7             \n",
-      "                             68),                                \n",
-      "                              past_key_values=None,              \n",
-      "                             hidden_states=None, att             \n",
-      "                             entions=None, cross_att             \n",
-      "                             entions=None)                       \n",
-      "                                                                 \n",
-      " bidirectional_2 (Bidirecti  (None, 100, 128)          426496    \n",
-      " onal)                                                           \n",
-      "                                                                 \n",
-      " dropout_39 (Dropout)        (None, 100, 128)          0         \n",
-      "                                                                 \n",
-      " bidirectional_3 (Bidirecti  (None, 64)                41216     \n",
-      " onal)                                                           \n",
-      "                                                                 \n",
-      " dropout_40 (Dropout)        (None, 64)                0         \n",
-      "                                                                 \n",
-      " dense_5 (Dense)             (None, 32)                2080      \n",
-      "                                                                 \n",
-      " dense_6 (Dense)             (None, 6)                 198       \n",
-      "                                                                 \n",
-      "=================================================================\n",
+      "Model: \"model_2\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                Output Shape                 Param #   Connected to                  \n",
+      "==================================================================================================\n",
+      " input_ids (InputLayer)      [(None, 100)]                0         []                            \n",
+      "                                                                                                  \n",
+      " attention_mask (InputLayer  [(None, 100)]                0         []                            \n",
+      " )                                                                                                \n",
+      "                                                                                                  \n",
+      " tf_bert_model_1 (TFBertMod  TFBaseModelOutputWithPooli   1094822   ['input_ids[0][0]',           \n",
+      " el)                         ngAndCrossAttentions(last_   40         'attention_mask[0][0]']      \n",
+      "                             hidden_state=(None, 100, 7                                           \n",
+      "                             68),                                                                 \n",
+      "                              pooler_output=(None, 768)                                           \n",
+      "                             , past_key_values=None, hi                                           \n",
+      "                             dden_states=None, attentio                                           \n",
+      "                             ns=None, cross_attentions=                                           \n",
+      "                             None)                                                                \n",
+      "                                                                                                  \n",
+      " bidirectional_8 (Bidirecti  (None, 100, 128)             426496    ['tf_bert_model_1[1][0]']     \n",
+      " onal)                                                                                            \n",
+      "                                                                                                  \n",
+      " dropout_82 (Dropout)        (None, 100, 128)             0         ['bidirectional_8[0][0]']     \n",
+      "                                                                                                  \n",
+      " bidirectional_9 (Bidirecti  (None, 64)                   41216     ['dropout_82[0][0]']          \n",
+      " onal)                                                                                            \n",
+      "                                                                                                  \n",
+      " dropout_83 (Dropout)        (None, 64)                   0         ['bidirectional_9[0][0]']     \n",
+      "                                                                                                  \n",
+      " dense_14 (Dense)            (None, 32)                   2080      ['dropout_83[0][0]']          \n",
+      "                                                                                                  \n",
+      " dense_15 (Dense)            (None, 6)                    198       ['dense_14[0][0]']            \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
       "Total params: 109952230 (419.43 MB)\n",
       "Trainable params: 469990 (1.79 MB)\n",
       "Non-trainable params: 109482240 (417.64 MB)\n",
-      "_________________________________________________________________\n"
+      "__________________________________________________________________________________________________\n"
      ]
     }
    ],
@@ -935,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -954,41 +955,42 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "125/125 [==============================] - 515s 4s/step - loss: 1.5904 - accuracy: 0.3249 - val_loss: 1.5606 - val_accuracy: 0.3475\n",
+      "125/125 [==============================] - 651s 5s/step - loss: 1.4183 - accuracy: 0.4681 - val_loss: 1.2127 - val_accuracy: 0.5560\n",
       "Epoch 2/10\n",
-      "125/125 [==============================] - 490s 4s/step - loss: 1.5842 - accuracy: 0.3274 - val_loss: 1.5597 - val_accuracy: 0.3475\n",
+      "125/125 [==============================] - 732s 6s/step - loss: 1.2027 - accuracy: 0.5645 - val_loss: 0.9469 - val_accuracy: 0.6625\n",
       "Epoch 3/10\n",
-      "125/125 [==============================] - 529s 4s/step - loss: 1.5829 - accuracy: 0.3254 - val_loss: 1.5596 - val_accuracy: 0.3475\n",
+      "125/125 [==============================] - 724s 6s/step - loss: 1.0268 - accuracy: 0.6300 - val_loss: 0.7937 - val_accuracy: 0.7110\n",
       "Epoch 4/10\n",
-      "125/125 [==============================] - 533s 4s/step - loss: 1.5827 - accuracy: 0.3259 - val_loss: 1.5604 - val_accuracy: 0.3475\n",
+      "125/125 [==============================] - 693s 6s/step - loss: 0.9076 - accuracy: 0.6736 - val_loss: 0.6967 - val_accuracy: 0.7520\n",
       "Epoch 5/10\n",
-      "125/125 [==============================] - 505s 4s/step - loss: 1.5820 - accuracy: 0.3291 - val_loss: 1.5606 - val_accuracy: 0.3475\n",
+      "125/125 [==============================] - 676s 5s/step - loss: 0.8135 - accuracy: 0.7059 - val_loss: 0.6145 - val_accuracy: 0.7805\n",
       "Epoch 6/10\n",
-      "125/125 [==============================] - 345s 3s/step - loss: 1.5816 - accuracy: 0.3316 - val_loss: 1.5589 - val_accuracy: 0.3475\n",
+      "125/125 [==============================] - 727s 6s/step - loss: 0.7381 - accuracy: 0.7362 - val_loss: 0.5720 - val_accuracy: 0.7950\n",
       "Epoch 7/10\n",
-      "125/125 [==============================] - 468s 4s/step - loss: 1.5811 - accuracy: 0.3307 - val_loss: 1.5611 - val_accuracy: 0.3475\n",
+      "125/125 [==============================] - 655s 5s/step - loss: 0.6885 - accuracy: 0.7502 - val_loss: 0.5279 - val_accuracy: 0.8095\n",
       "Epoch 8/10\n",
-      "125/125 [==============================] - 510s 4s/step - loss: 1.5813 - accuracy: 0.3275 - val_loss: 1.5607 - val_accuracy: 0.3475\n",
+      "125/125 [==============================] - 697s 6s/step - loss: 0.6455 - accuracy: 0.7664 - val_loss: 0.5016 - val_accuracy: 0.8270\n",
       "Epoch 9/10\n",
-      "125/125 [==============================] - 4098s 33s/step - loss: 1.5805 - accuracy: 0.3307 - val_loss: 1.5606 - val_accuracy: 0.3475\n",
+      "125/125 [==============================] - 723s 6s/step - loss: 0.6077 - accuracy: 0.7788 - val_loss: 0.4845 - val_accuracy: 0.8265\n",
       "Epoch 10/10\n",
-      "125/125 [==============================] - 477s 4s/step - loss: 1.5829 - accuracy: 0.3291 - val_loss: 1.5615 - val_accuracy: 0.3475\n"
+      " 36/125 [=======>......................] - ETA: 8:11 - loss: 0.5961 - accuracy: 0.7812"
      ]
     }
    ],
    "source": [
     "hist = model.fit(\n",
-    "    train_padded,\n",
-    "    train_labels_encoded,\n",
+    "    x=[train_inputs, train_masks],\n",
+    "    y=train_labels_encoded,\n",
     "    epochs=10,\n",
     "    batch_size=128,\n",
-    "    validation_data=(test_padded, test_labels_encoded),\n",
+    "    validation_data=([test_inputs, test_masks], test_labels_encoded),\n",
+    "    callbacks=[early_stopping]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
