First submission version

--- a/models.ipynb
+++ b/models.ipynb
@@ -1007,7 +1007,35 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Model Comparison\n",
+    "\n",
+    "1. To compare the performance between the three models, we can analyze their accuracy and loss plots. From the plots, we can observe the following:\n",
+    "\n",
+    "* **Fully Connected Neural Network (NN)**: The NN model achieved a training accuracy of around 95% and a validation accuracy of around 84%. The loss decreased steadily during training, indicating that the model was learning. However, as the training loss continued to decrease, the validation loss increased slightly, suggesting some overfitting. The early stopping callback was triggered to prevent overfitting.\n",
+    "\n",
+    "* **Recurrent Neural Network with LSTM (LSTM)**: The LSTM model achieved a training accuracy of around 95% and a validation accuracy of around 90%. Similar to the NN model,there was a sign of overfitting and the early stopping callback was triggered to prevent overfitting.\n",
+    "\n",
+    "* **Fine-tuned Transformer (BERT)**: The BERT model achieved a training accuracy of around 85% and a validation accuracy of around 85%. The loss decreased rapidly during training, indicating fast learning. The validation loss was also lower than the training loss, suggesting that the model was not overfitting. However, for this model, only 10 epochs were trained to reduce the training time which may not capture whether the model would overfit with more epochs.\n",
+    "\n",
+    "Based on these observations, the LSTM model appears to be the best approach. It achieved the highest accuracy on both the training and validation sets and had a low loss. This is expected, as RNNs, especially those with LSTM units, are designed to process sequential data and can capture the temporal dependencies between words in a sentence, which is crucial for understanding the sentiment. \n",
+    "\n",
+    "However, the BERT model is a state-of-the-art model for natural language processing tasks and has been pre-trained on a large corpus of text data, allowing it to capture complex patterns and semantic relationships in the text. Thus, the BERT model should have performed better yet this was not the case. Our guess is that the our defined layers was not perfect, requiring more fine-tuning to achieve desired results.\n",
+    "\n",
+    "It is worth mentioning that, while the LSTM and BERT performed better than the NN, there are more complex and harder to interpret than the NN. With specific needs, if interpretability is preferred, the NN might be a better choice despite its lower performance.\n",
+    "\n",
+    "2. From this exercise, we have learned several key points:\n",
+    "\n",
+    "* **Preprocessing**: Preprocessing text data involves tasks such as tokenization, padding, and one-hot encoding. These steps are crucial for preparing the data for training machine learning models.\n",
+    "\n",
+    "* **Model Selection**: Different models, such as NNs, RNNs with LSTM, and fine-tuned transformers, can be used for sentiment analysis. Each model has its own strengths and weaknesses, and it is important to evaluate their performance on the specific task at hand.\n",
+    "\n",
+    "* **Overfitting**: Overfitting occurs when a model performs well on the training data but fails to generalize to new, unseen data. It is important to monitor the validation loss and accuracy to detect signs of overfitting and take appropriate measures, such as early stopping or regularization techniques, to mitigate it.\n",
+    "\n",
+    "* **Fine-tuning**: Fine-tuning a pre-trained model, such as BERT, can lead to improved performance. However, it may require further fine-tuning and experimentation to achieve the best possible results. Fine-tuning involves adjusting hyperparameters, modifying the model architecture, or using different training strategies.\n",
+    "\n",
+    "Overall, this exercise has provided insights into the process of sentiment analysis, from data preprocessing to model building and evaluation. It highlights the importance of selecting the right model, monitoring performance metrics, and continuously iterating and improving the models to achieve better results.\n"
+   ]
   }
  ],
  "metadata": {
