--- a/models.ipynb
+++ b/models.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NLP Sentiment Analysis"
+    "# NLP Sentiment Analysis\n",
+    "\n",
+    "Group members:\n",
+    "\n",
+    "* Khanh Duong TRAN\n",
+    "* Viet Thai NGUYEN\n",
+    "* Minh Duc VU"
    ]
   },
   {
